Fixes in the server and prepared for the solets.